--- a/com.visualstudio.code-oss.yml
+++ b/com.visualstudio.code-oss.yml
@@ -67,7 +67,7 @@ modules:
         XDG_CACHE_HOME: /run/build/vscode/flatpak-node/cache
         DEBUG: electron-rebuild,electron-builder
         CHILD_CONCURRENCY: "1"
-        VSCODE_QUALITY: stable
+        VSCODE_QUALITY: insider
       arch:
         arm: { env: { earch: armv7l, suffix: "-armv7l" } }
         aarch64: { env: { earch: arm64, suffix: "-arm64" } }
