Update wrapper and set its type to dir Otherwise we end up building wrapper from the latest commit of it's repository instead of the one of submodule

--- a/com.visualstudio.code-oss.yml
+++ b/com.visualstudio.code-oss.yml
@@ -131,8 +131,9 @@ modules:
     buildsystem: meson
     config-opts:
       - -Deditor_binary=/app/main/bin/code-oss
+      - -Deditor_args=['--extensions-dir', '$XDG_DATA_HOME/vscode/extensions']
       - -Dprogram_name=code-oss
       - -Deditor_title=Visual Studio Code Open Source
     sources:
-      - type: git
+      - type: dir
         path: wrapper
