--- a/com.visualstudio.code-oss.yml
+++ b/com.visualstudio.code-oss.yml
@@ -5,6 +5,7 @@ runtime-version: '20.08'
 finish-args:
   - --share=ipc
   - --socket=x11
+  - --socket=wayland
   - --device=dri
   - --allow=devel
   - --socket=pulseaudio
