Disable crash reporter
Fixes flathub/com.visualstudio.code-oss#51

--- a/com.visualstudio.code-oss.yml
+++ b/com.visualstudio.code-oss.yml
@@ -142,7 +142,11 @@ modules:
     buildsystem: meson
     config-opts:
       - -Deditor_binary=/app/main/bin/code-oss
-      - -Deditor_args=['--extensions-dir', '$XDG_DATA_HOME/vscode/extensions']
+      - >-
+        -Deditor_args=[
+        '--extensions-dir', '$XDG_DATA_HOME/vscode/extensions',
+        '--disable-crash-reporter'
+        ]
       - -Dprogram_name=code-oss
       - -Deditor_title=Visual Studio Code Open Source
     sources:
