Add `tools` submodule
flatpak-builder-tools was accidentally committed as a submodule;
since it was already pushed to the default protected git branch,
lets finalize the module addition.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "wrapper"]
 	path = wrapper
 	url = https://github.com/flathub/ide-flatpak-wrapper.git
+[submodule "tools"]
+	path = tools
+	url = https://github.com/flatpak/flatpak-builder-tools.git
