--- a/com.visualstudio.code-oss.yml
+++ b/com.visualstudio.code-oss.yml
@@ -14,6 +14,7 @@ finish-args:
   - --talk-name=org.freedesktop.Notifications
   - --talk-name=org.freedesktop.Flatpak
   - --filesystem=host
+  - --filesystem=xdg-config/gtk-3.0:ro
 command: code-oss
 rename-desktop-file: code-oss.desktop
 rename-appdata-file: code-oss.appdata.xml
