--- a/.github/workflows/update-generated-sources.yml
+++ b/.github/workflows/update-generated-sources.yml
@@ -7,8 +7,9 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
-          apt install -y \
+          sudo apt install -y \
             python3-yaml \
+            python3-aiohttp \
             jq
 
       - name: Checkout repository
@@ -18,6 +19,13 @@ jobs:
           submodules: true
 
       - name: Update generated sources
+        env:
+          GIT_AUTHOR_NAME: Flatpak External Data Checker
+          GIT_COMMITTER_NAME: Flatpak External Data Checker
+          GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
+          GIT_COMMITTER_EMAIL: ${{ github.actor }}@users.noreply.github.com
+          EMAIL: ${{ github.actor }}@users.noreply.github.com
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -e
           ./update-generated-sources.sh
